--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "react-final-form": "^6.5.9",
     "typescript": "^5.0.3",
     "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
